admin add remove + remove chat room

--- a/app/views/rooms/_messages.html.erb
+++ b/app/views/rooms/_messages.html.erb
@@ -10,7 +10,7 @@
     </div>
     <img class="direct-chat-img" src="" alt="">
     <div class="direct-chat-text">
-      <%= smg.content %>
+      <%= msg.content %>
     </div>
   </div>
 <% end %>
