--- a/app/views/rooms/_description.html.erb
+++ b/app/views/rooms/_description.html.erb
@@ -10,6 +10,14 @@
   <div class="box-body">
     <ul class="products-list product-list-in-box">
       <%= $current_room.description %>
+      <li id='description-btn'>
+      <% if $current_room.administrators.include?(current_user) %>
+        <button id='become_user_leave' class='btn btn-warning'>Become User</button>
+        <button id='delete_room' class='btn btn-danger'>Delete Room</button>
+      <% else %>
+        <button id='become_user_leave' class='btn btn-danger'>Leave Room</button>
+      <% end %>
+      </li>
     </ul>
   </div>
 </div>
